--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -23,8 +23,8 @@
     <string name="grade_good">İYİ</string>
     <string name="grade_passable">ORTA</string>
     <string name="all_things_considered_i_think">Her şey göz önüne alındığında, bence</string>
-    <string name="five_grading">Beş dereceli</string>
-    <string name="seven_grading">Yedi dereceli</string>
+    <string name="five_quality_grades">Beş dereceli</string>
+    <string name="seven_quality_grades">Yedi dereceli</string>
     <string name="incitation_making_new_poll">Yeni bir anket yapmayı deneyin, ücretsiz!</string>
     <string name="button_new_poll">Yeni Anket</string>
     <string name="action_delete">Sil</string>
@@ -61,7 +61,7 @@
     <string name="summary_button_no_rescind">Hayır, geri al</string>
     <string name="toast_you_cannot_go_back_from_here">Buradan geri dönemezsiniz, bu hile olur.</string>
     <string name="onboarding_welcome_to_your_offline_poll_app">Dereceli oylama yöntemini kullanan çevrimdışı anket uygulamasına hoş geldiniz.</string>
-    <string name="three_grading">Üç dereceli</string>
+    <string name="three_quality_grades">Üç dereceli</string>
     <string name="button_be_the_first_to_vote">İlk oyu verin</string>
     <string name="verb_is">" "</string>
     <string name="button_try_online_webapp">Çevrimiçi Uygulamayı Dene</string>
