--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,11 @@
     <string name="grade_good">good</string>
     <string name="grade_very_good">very good</string>
     <string name="grade_excellent">excellent</string>
+    <string name="grade_extremely_urgent">extremely urgent</string>
+    <string name="grade_very_urgent">very urgent</string>
+    <string name="grade_urgent">urgent</string>
+    <string name="grade_neutral">neutral</string>
+    <string name="grade_not_urgent">not urgent</string>
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
@@ -35,6 +40,7 @@
     <string name="five_quality_grades">Five quality grades</string>
     <string name="five_positive_quality_grades">Five positive quality grades</string>
     <string name="three_quality_grades">Three quality grades</string>
+    <string name="five_urgency_grades">Five urgency grades</string>
     <string name="settings_screen_title">Settings</string>
     <string name="incitation_making_new_poll">Try making a new poll, it\'s free !</string>
     <string name="title_multiline_majority_judgment_urn">Majority\nJudgment\nUrn</string>
