--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,12 @@
     <string name="grade_high_priority">high priority</string>
     <string name="grade_priority">priority</string>
     <string name="grade_no_priority">no priority</string>
+    <string name="grade_disgust" translatable="false">😫</string>
+    <string name="grade_reluctance" translatable="false">😒</string>
+    <string name="grade_ataraxia" translatable="false">😐</string>
+    <string name="grade_enthusiasm" translatable="false">😌</string>
+    <string name="grade_great_enthusiasm" translatable="false">😀</string>
+    <string name="grade_elation" translatable="false">😍</string>
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
@@ -50,6 +56,7 @@
     <string name="three_quality_grades">Three quality grades</string>
     <string name="five_urgency_grades">Five urgency grades</string>
     <string name="five_priority_grades">Five priority grades</string>
+    <string name="six_enthusiasm_grades">Six enthusiasm grades</string>
     <string name="settings_screen_title">Settings</string>
     <string name="incitation_making_new_poll">Try making a new poll, it\'s free !</string>
     <string name="title_multiline_majority_judgment_urn">Majority\nJudgment\nUrn</string>
