--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,12 @@
     <string name="wip_stay_tuned">Work in Progress.\nStay tuned for updates via F-Droid.</string>
     <string name="proportional_algorithm_none">None</string>
     <string name="proportional_algorithm_mj_score">MJ-Score</string>
-    <string name="proportional_algorithm_favoritism">Favoritism</string>
+    <string name="proportional_algorithm_osmotic_favoritism">Osmotic Favoritism</string>
     <string name="toast_you_cannot_go_back_from_here">You cannot go back from here, that would be cheating.</string>
     <string name="toast_that_poll_does_not_exist">That poll does not exist anymore.</string>
+    <string name="proportional_algorithm_mj_score_description">"This algorithm was discovered by Marc Paraire in 2024 and computes a unique score for each possible merit profile.            "</string>
+    <string name="proportional_algorithm_mj_score_features">"It is:\n✅ Isomorphic to Majority Judgment\n✅ Best when voters are candid\n❌ Not resilient to polarized voting            "</string>
+    <string name="proportional_algorithm_osmotic_favoritism_description">This algorithm was discovered by Dominique Merle in 2025 with the express intent of computing a proportional representation that disincentivizes polarized voting, just like Majority Judgment does.</string>
+    <string name="proportional_algorithm_osmotic_favoritism_features">It is:\n✅ Resilient to polarized voting\n✅ Best when voters are opinionated\n❌ Not isomorphic to Majority Judgment</string>
+    <string name="button_back">Back</string>
 </resources>
