fix(i18n): add a new translation string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,5 @@
     <string name="tts_remove_the_proposal">remove the proposal</string>
     <string name="tts_add_the_proposal">add the proposal</string>
     <string name="tts_judge_proposal_as_grade">judge %s as %s</string>
+    <string name="tts_choose_a_proportional_algorithm">choose a proportional algorithm</string>
 </resources>
