--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="onboarding_welcome_to_your_offline_poll_app">Welcome to your offline poll app using Majority Judgment.</string>
     <string name="onboarding_setup_a_poll_and_share_the_phone">Setup a poll and share the phone amongst participants.</string>
     <string name="onboarding_this_is_free_software">This is Libre Software, find out how to contact us or contribute in the About section.</string>
+    <string name="home_try_poll_templates">Or quickly start any of these template polls:</string>
     <string name="votes">votes</string>
     <string name="vote">vote</string>
     <string name="action_delete">Delete</string>
@@ -130,4 +131,24 @@
     <string name="tts_add_the_proposal">add the proposal</string>
     <string name="tts_judge_proposal_as_grade">judge %s as %s</string>
     <string name="tts_choose_a_proportional_algorithm">choose a proportional algorithm</string>
+    <string name="poll_template_meal_subject">Meal of Tonight</string>
+    <string name="poll_template_meal_proposal_pizza">Pizza</string>
+    <string name="poll_template_meal_proposal_pasta">Pasta</string>
+    <string name="poll_template_meal_proposal_rice">Rice</string>
+    <string name="poll_template_meal_proposal_veggies">Veggies</string>
+    <string name="poll_template_meal_proposal_bread">Bread</string>
+    <string name="poll_template_meal_proposal_soup">Soup</string>
+    <string name="poll_template_holiday_subject">Holiday Destination</string>
+    <string name="poll_template_holiday_proposal_mountain">Mountain</string>
+    <string name="poll_template_holiday_proposal_forest">Forest</string>
+    <string name="poll_template_holiday_proposal_ocean">Ocean</string>
+    <string name="poll_template_holiday_proposal_theme_park">Theme Park</string>
+    <string name="poll_template_holiday_proposal_metropolis">Metropolis</string>
+    <string name="poll_template_holiday_proposal_moon">The Moon</string>
+    <string name="poll_template_project_subject">Project of the Year</string>
+    <string name="poll_template_project_proposal_raise_awareness">Raise Awareness</string>
+    <string name="poll_template_project_proposal_levy_funds">Levy Funds</string>
+    <string name="poll_template_project_proposal_build_a_toolkit">Build a Toolkit</string>
+    <string name="poll_template_project_proposal_call_for_allies">Call for Allies</string>
+    <string name="poll_template_project_proposal_craft_a_solution">Craft a Solution</string>
 </resources>
