--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -122,6 +122,6 @@
     <string name="tts_more_information_about_proportional_algorithms">Más información sobre algoritmos de proporcion</string>
     <string name="tts_remove_the_proposal">eliminar la propuesta</string>
     <string name="tts_add_the_proposal">añadir la propuesta</string>
-    <string name="tts_judge_proposal_as_grade">juzgar %s como %s</string>
+    <string name="tts_judge_proposal_as_grade">juzgar %1$s como %2$s</string>
     <string name="tts_choose_a_proportional_algorithm">elige un algoritmo de proporcion</string>
 </resources>
