refacto(i18n): use proper i18n and hoist greenToRed some more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,10 @@
     <string name="action_cancel">Cancel</string>
     <string name="title_about">About</string>
     <string name="title_poll_setup">New Poll</string>
+    <string name="opinion_profile">Opinion Profile</string>
+    <string name="plot_title_opinion_profile">Total amount of judgments cast per grade.</string>
+    <string name="nuance_profile">Nuance Profile</string>
+    <string name="plot_title_nuance_profile">Amount of ballots per amount of different grades used in each ballot.</string>
     <string name="about_help_us_make_it_better">Help us make it better !</string>
     <string name="about_this_app_is_libre_software">This app is libre software.</string>
     <string name="help_your_participation_was_a_success">Your participation was a success !\nYou can now pass this device to the next participant.</string>
